@startuml
title ElectroCorp - Database Diagram

hide methods
hide stereotypes
skinparam linetype ortho

entity "user" as user {
  * id : BIGINT <<PK>>
  --
  full_name : VARCHAR
  email : VARCHAR <<UNIQUE>>
  password : VARCHAR
  status : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
}

entity "access_profile" as access_profile {
  * id : BIGINT <<PK>>
  --
  name : VARCHAR
}

entity "user_access_profile" as user_access_profile {
  * user_id : BIGINT <<FK>>
  * access_profile_id : BIGINT <<FK>>
}

entity "plan" as plan {
  * id : BIGINT <<PK>>
  --
  code : VARCHAR <<UNIQUE>>
  name : VARCHAR
  monthly_price : DECIMAL(10,2)
  status : VARCHAR
}

entity "subscription" as subscription {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  plan_id : BIGINT <<FK>>
  status : VARCHAR
  started_at : DATE
  ends_at : DATE
  created_at : DATETIME
  updated_at : DATETIME
}

entity "payment" as payment {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  plan_id : BIGINT <<FK>>
  subscription_id : BIGINT <<FK>>
  amount : DECIMAL(10,2)
  method : VARCHAR
  status : VARCHAR
  created_at : DATE
  card_last_four_digits : VARCHAR
  holder_name : VARCHAR
}

entity "device" as device {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  name : VARCHAR
  type : VARCHAR
  room : VARCHAR
  power_watts : INT
  status : VARCHAR
  created_at : DATETIME
  updated_at : DATETIME
}

entity "routine" as routine {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  device_id : BIGINT <<FK>>
  name : VARCHAR
  action : VARCHAR
  scheduled_time : VARCHAR
  enabled : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

entity "energy_reading" as energy_reading {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  device_id : BIGINT <<FK>>
  watts : DECIMAL(10,2)
  recorded_at : DATE
  status : VARCHAR
  created_at : DATETIME
}

entity "alert" as alert {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  device_id : BIGINT <<FK>>
  title : VARCHAR
  message : TEXT
  level : VARCHAR
  created_at : DATE
  read : BOOLEAN
}

user ||--o{ subscription
user ||--o{ payment
user ||--o{ device
user ||--o{ routine
user ||--o{ energy_reading
user ||--o{ alert

plan ||--o{ subscription
plan ||--o{ payment

subscription ||--o{ payment

device ||--o{ routine
device ||--o{ energy_reading
device ||--o{ alert

user ||--o{ user_access_profile
access_profile ||--o{ user_access_profile

@enduml
